--- a/AspNet.CRUD/Views/Shared/_Layout.cshtml
+++ b/AspNet.CRUD/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
         <title>@ViewBag.Title</title>
         @Styles.Render("~/Content/css")
         @Styles.Render("~/Content/bootstrap")
-        @Styles.Render("~/Content/Style")
+        @Styles.Render("~/Content/Style.css")
         @Scripts.Render("~/bundles/modernizr")
     </head>
     <body>
