--- a/AspNet.CRUD/Views/Jumper/Index.cshtml
+++ b/AspNet.CRUD/Views/Jumper/Index.cshtml
@@ -57,7 +57,7 @@
 		        <div class="input-group h2">
 			        <input name="search" class="form-control" id="search" type="text" placeholder="Pesquisar Itens">
 			        <span class="input-group-btn">
-				        <button class="btn btn-primary" value="Pesquisar" type="submit">
+				        <button id="buttonSearch" class="btn btn-primary" value="Pesquisar" type="submit">
 					        <span class="glyphicon glyphicon-search"></span>
 				        </button>
 			        </span>
